Backport EMI integration (and fix recipes)